# diffractor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff.yml  main.yml
gendiff/: __init__.py  cli.py  compare.py  gendiff.py  parser.py  read_file.py
gendiff/formatters/: __init__.py  formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: __init__.py  test_gendiff.py  test_init.py  test_invalid_params.py
tests/fixtures/: file1.yml  test_gendiff.py
tests/fixtures/output/: json_diff.txt
