[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A diff generator is a software tool that identifies and highlights the discrepancies or variations between two sets of data or files, helping users compare and analyze them efficiently."
authors = ["George <solidpostbox@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
gen-diff = "gendiff.scripts.gen_diff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipython = "^8.8.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
